src/content/docs/manual/bluetape4k-exposed/1.11/modules/bluetape4k-exposed-r2dbc-caffeine.md
---
slug: "manual/bluetape4k-exposed/1.11/modules/bluetape4k-exposed-r2dbc-caffeine"
manualId: "bluetape4k-exposed-r2dbc-caffeine"
id: "bluetape4k-exposed-r2dbc-caffeine"
title: "Exposed R2DBC Caffeine Cache"
locale: "en"
kind: "library"
gradlePath: ":bluetape4k-exposed-r2dbc-caffeine"
sourceDir: "exposed/r2dbc-caffeine"
releaseRef: "1.11.0"
artifact: io.github.bluetape4k.exposed:bluetape4k-exposed-r2dbc-caffeine
manual:
  id: "bluetape4k-exposed-r2dbc-caffeine"
  repository: "bluetape4k-exposed"
  group: "r2dbc"
  kind: "library"
  sourceCommit: "cd0ab9cf3b56ac909c72e5e512f9c6d1345d5f4a"
  sourcePath: "docs/manual/en/modules/bluetape4k-exposed-r2dbc-caffeine.md"
  minorVersion: "1.11"
  releaseRef: "1.11.0"
  releaseCommit: "0b494a5fd1e083006046764757342b68a397e4c5"
  sourceDir: "exposed/r2dbc-caffeine"
  layer: "build"
---


This adapter combines coroutine-first R2DBC with in-process Caffeine AsyncCache. It implements the common cache repository contract without hiding lifecycle or durability choices.

## Problem

Cache and database state can diverge when a miss, write, invalidation, timeout, cancellation, or shutdown completes only partly. The adapter supplies the integration; the application still defines acceptable staleness and failure behavior.

## When to use it

Use this module when in-process Caffeine AsyncCache is the chosen backend and the persistence path is coroutine-first R2DBC. Compare all six adapters in the [cache selection guide](/manual/bluetape4k-exposed/1.11/guides/cache-selection/) before adding infrastructure.

## Coordinates

```kotlin
dependencies {
    implementation(platform("io.github.bluetape4k:bluetape4k-dependencies:<version>"))
    implementation("io.github.bluetape4k.exposed:bluetape4k-exposed-r2dbc-caffeine")
}
```

Users select the central BOM version; this page records the stable `1.11` source line.

## Core concepts

`get` and `getAll` are read-through operations. Cache-aside is an application-owned DB update followed by invalidation. True write-through requires the configured writer to finish DB persistence before returning. Write-behind accepts a delayed durability window. Ordinary `put` must not be called write-through without that writer policy. This adapter is local-only; it has no distributed invalidation.

## Quick start

Extend `AbstractR2dbcCaffeineRepository` and provide `table`, `extractId`, `ResultRow.toEntity`, and the update/insert DSL hooks. Construct it with a reviewed `LocalCacheConfig`.

```kotlin
repository.use { repo ->
    val current = repo.get(id)          // miss -> DB loader -> cache
    current?.let { repo.put(id, it) }   // durability follows write mode
    repo.invalidate(id)                 // cache-only by default
}
```

## API by task

| Task | API |
| --- | --- |
| Cache-backed read | `containsKey`, `get`, `getAll` |
| DB bypass | `findByIdFromDb`, `findAllFromDb`, `countFromDb` |
| Policy-controlled write | `put`, `putAll` |
| Eviction | `invalidate`, `invalidateAll`, `clear` |
| Entity mapping | `ResultRow.toEntity`, `extractId`, update/insert hooks |
| Lifecycle | `close` |

## Recommended patterns

Keep one repository per cache namespace and close it with the application. For cache-aside, commit the DB transaction before invalidating. Treat write-through failure as an incomplete write. Before write-behind, expose queue/dead-letter state and define the shutdown drain budget. Keep key prefixes and serialized value formats stable.

## Integrations

The module joins Exposed R2DBC, the shared cache foundation, and in-process Caffeine AsyncCache. Loader/writer adapters own the cache-to-table bridge; the application owns the surrounding service transaction and client lifecycle.

## Configuration

`LocalCacheConfig` controls namespace, TTL/expiry, cache/write mode, and backend limits. Values remain local; entity mapping and repository operations are suspend functions. Validate positive durations and bounded batch/queue sizes at startup.

## Failure modes

Caller cancellation can happen while cache or R2DBC work is in flight. Write-behind acknowledgement does not mean the DB has committed. A cache hit can be stale, a backend success can be followed by DB failure, and DB commit can be followed by failed invalidation. Record these as distinct states.

## Operations

The repository owns the async cache and bounded write-behind scope; close it during application shutdown. Monitor hit/miss, backend latency, retries/timeouts, queue depth, rejected or dead-letter writes, invalidation lag, and shutdown drain. Set separate SLOs for cache and database paths.

## Testing

Use isolated cache and database fixtures with unique namespaces. Prove miss loading, partial `getAll` misses, each enabled write mode, cache-only invalidation, TTL, partial failure, and lifecycle cleanup.

```bash
./gradlew :bluetape4k-exposed-r2dbc-caffeine:test
```

## Workshops and learning path

1. Read [Exposed cache foundation](/manual/bluetape4k-exposed/1.11/modules/bluetape4k-exposed-cache/).
2. Choose a backend in [cache selection](/manual/bluetape4k-exposed/1.11/guides/cache-selection/).
3. Implement read-through plus cache-only invalidation first.
4. Add partial-failure and shutdown tests before near cache or write-behind.
5. Continue with [exposed-workshop](https://github.com/bluetape4k/exposed-workshop).

## Limitations

The adapter does not create a distributed transaction, provision the backend, migrate stored cache values, or decide whether stale data is safe. It is local-only; it has no distributed invalidation.

<!-- release-readme-diagrams:start -->
## Release diagrams

These diagrams are loaded directly from README assets published with the `1.11.0` release and pinned to its immutable commit. They describe this manual's released structure and runtime flows, not later Snapshot changes. Select a preview to open the SVG at the same release commit.

### R2DBC Caffeine local cache architecture diagram

[![R2DBC Caffeine local cache architecture diagram](https://raw.githubusercontent.com/bluetape4k/bluetape4k-exposed/0b494a5fd1e083006046764757342b68a397e4c5/docs/images/readme-diagrams/exposed-r2dbc-caffeine-diagram-01.png)](https://github.com/bluetape4k/bluetape4k-exposed/blob/0b494a5fd1e083006046764757342b68a397e4c5/docs/images/readme-diagrams/exposed-r2dbc-caffeine-diagram-01.svg)

_Release README: [`exposed/r2dbc-caffeine/README.md`](https://github.com/bluetape4k/bluetape4k-exposed/blob/0b494a5fd1e083006046764757342b68a397e4c5/exposed/r2dbc-caffeine/README.md)_

### R2DBC Caffeine cache sequence diagram

[![R2DBC Caffeine cache sequence diagram](https://raw.githubusercontent.com/bluetape4k/bluetape4k-exposed/0b494a5fd1e083006046764757342b68a397e4c5/docs/images/readme-diagrams/exposed-r2dbc-caffeine-sequence-01.png)](https://github.com/bluetape4k/bluetape4k-exposed/blob/0b494a5fd1e083006046764757342b68a397e4c5/docs/images/readme-diagrams/exposed-r2dbc-caffeine-sequence-01.svg)

_Release README: [`exposed/r2dbc-caffeine/README.md`](https://github.com/bluetape4k/bluetape4k-exposed/blob/0b494a5fd1e083006046764757342b68a397e4c5/exposed/r2dbc-caffeine/README.md)_

<!-- release-readme-diagrams:end -->

## Sources

- [Module README](https://github.com/bluetape4k/bluetape4k-exposed/blob/1.11.0/exposed/r2dbc-caffeine/README.md)
- [Abstract repository](https://github.com/bluetape4k/bluetape4k-exposed/blob/1.11.0/exposed/r2dbc-caffeine/src/main/kotlin/io/bluetape4k/exposed/r2dbc/caffeine/repository/AbstractR2dbcCaffeineRepository.kt)
- [Module build](https://github.com/bluetape4k/bluetape4k-exposed/blob/1.11.0/exposed/r2dbc-caffeine/build.gradle.kts)
